fix: spacing on form

--- a/src/styles/_elements-logo--priority.scss
+++ b/src/styles/_elements-logo--priority.scss
@@ -229,9 +229,6 @@ footer {
 			min-width: 500px;
 			order: 2;
 		}
-      p{
-        padding-bottom: $gridUnit*4;
-      }
 
 	}
 	.social-links {
@@ -269,11 +266,13 @@ footer {
 		background: #cee4ee;
 		border-radius: $gridUnit*2;
 		order: 1;
+        margin: $padding-xs;
 
 		@media (min-width: $breakForDesktop) {
 			flex: 0 0 auto;
 			max-width: 500px;
 			order: 3;
+            margin-bottom: 0;
 			padding: $gridUnit*2 $gridUnit*4 $gridUnit*2 $gridUnit*4;
 		}
 
@@ -386,6 +385,9 @@ section {
 	background: white;
 	border-radius: 20px;
 	box-shadow: 0 10px 20px rgba(0, 0, 0, .2);
+    @media (min-width: $breakForTablet) {
+      margin: $padding-lg auto;
+    }
 }
 
 .dark-bubble {
