--- a/src/styles/styles-2025.css
+++ b/src/styles/styles-2025.css
@@ -760,9 +760,6 @@ footer .about-me {
     order: 2;
   }
 }
-footer .about-me p {
-  padding-bottom: 32px;
-}
 footer .social-links {
   display: none;
   flex-flow: column;
@@ -798,12 +795,14 @@ footer form {
   background: #cee4ee;
   border-radius: 16px;
   order: 1;
+  margin: 16px;
 }
 @media (min-width: 992px) {
   footer form {
     flex: 0 0 auto;
     max-width: 500px;
     order: 3;
+    margin-bottom: 0;
     padding: 16px 32px 16px 32px;
   }
 }
@@ -897,6 +896,11 @@ section {
   background: white;
   border-radius: 20px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+@media (min-width: 767px) {
+  .bubble {
+    margin: 144px auto;
+  }
 }
 
 .dark-bubble {
